[package]
name = "ant-libp2p-swarm-test"
version = "0.5.0"
edition = "2021"
rust-version = { workspace = true }
license = "MIT"
description = "Test framework for code building on top of libp2p-swarm"
repository = "https://github.com/maidsafe/ant-rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
ant-libp2p-core = { workspace = true }
libp2p-identity = { workspace = true, features = ["rand"] }
ant-libp2p-plaintext = { workspace = true }
ant-libp2p-swarm = { workspace = true }
ant-libp2p-tcp = { workspace = true }
ant-libp2p-yamux = { workspace = true }
futures = { workspace = true }
rand = "0.8.5"
tracing = { workspace = true }
futures-timer = "3.0.3"

[features]
default = ["async-std"]

async-std = ["ant-libp2p-swarm/async-std", "ant-libp2p-tcp/async-io"]
tokio = ["ant-libp2p-swarm/tokio", "ant-libp2p-tcp/tokio"]

[lints]
workspace = true
