[package]
name = "ant-libp2p-connection-limits"
edition = "2021"
rust-version = { workspace = true }
description = "Connection limits for libp2p."
version = "0.4.1"
license = "MIT"
repository = "https://github.com/maidsafe/ant-rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
ant-libp2p-core = { workspace = true }
ant-libp2p-swarm = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
ant-libp2p-identify = { workspace = true }
ant-libp2p-ping = { workspace = true }
libp2p-swarm-derive = { path = "../../swarm-derive" }
ant-libp2p-swarm-test = { path = "../../swarm-test" }
quickcheck = { workspace = true }
rand = "0.8.5"

[lints]
workspace = true
