[package]
name = "libp2p-rendezvous"
edition = "2021"
rust-version = { workspace = true }
description = "Rendezvous protocol for libp2p"
version = "0.15.0"
authors = ["The COMIT guys <hello@comit.network>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
asynchronous-codec = { workspace = true }
async-trait = "0.1"
bimap = "0.6.3"
futures = { workspace = true, features = ["std"] }
futures-timer = "3.0.3"
web-time = { workspace = true }
ant-libp2p-core = { workspace = true }
ant-libp2p-swarm = { workspace = true }
libp2p-identity = { workspace = true }
ant-libp2p-request-response = { workspace = true }
quick-protobuf = "0.8"
quick-protobuf-codec = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ant-libp2p-swarm = { workspace = true, features = ["macros", "tokio"] }
ant-libp2p-noise = { workspace = true }
ant-libp2p-ping = { workspace = true }
ant-libp2p-identify = { workspace = true }
ant-libp2p-swarm-test = { path = "../../swarm-test" }
ant-libp2p-tcp = { workspace = true, features = ["tokio"] }
ant-libp2p-yamux = { workspace = true }
rand = "0.8"
tokio = { workspace = true, features = [ "rt-multi-thread", "time", "macros", "sync", "process", "fs", "net" ] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
