[package]
name = "libp2p-pnet"
edition = "2021"
rust-version = { workspace = true }
description = "Private swarm support for libp2p"
version = "0.25.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = { workspace = true }
salsa20 = "0.10"
sha3 = "0.10"
tracing = { workspace = true }
rand = "0.8"
pin-project = "1.1.5"

[dev-dependencies]
ant-libp2p-core = { workspace = true }
libp2p-identity = { workspace = true, features = ["ed25519", "rsa", "ecdsa","secp256k1", "rand"] }
ant-libp2p-noise = { workspace = true }
ant-libp2p-swarm = { workspace = true, features = ["tokio"] }
ant-libp2p-tcp = { workspace = true, features = ["tokio"] }
ant-libp2p-websocket = { workspace = true }
ant-libp2p-yamux = { workspace = true }
quickcheck = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
